<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:id="@+id/pref_dailyMax"
        android:title="@string/title_preference_dailyMax"
        android:key="@string/KEY_PREFERENCE_DAILY_MAX"
        android:summary="@string/summary_preference_dailyMax"
        android:defaultValue="@string/default_preference_dailyMax"
        android:gravity="center_horizontal"
        android:inputType="number"/>

    <ListPreference
        android:title="@string/title_preference_language"
        android:key="@string/KEY_PREFERENCE_LANGUAGE"
        android:summary="%s"
        android:defaultValue="1"
        android:entries="@array/list_language"
        android:entryValues="@array/list_language_values"
        />

</PreferenceScreen>