<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/grp1" android:checkableBehavior="single">
        <item
            android:id="@+id/content_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:checked="true"
            android:title="@string/title_activity_dashboard" />
    </group>

    <group android:id="@+id/grp2" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_recipes"
            android:icon="@drawable/ic_recipes"
            android:title="@string/title_activity_recipes" />
        <item
            android:id="@+id/nav_foods"
            android:icon="@drawable/ic_foods"
            android:title="@string/title_activity_foods" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_favourites"
            android:title="@string/title_activity_favourites" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/title_activity_history" />
    </group>

    <group android:id="@+id/grp3" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/title_activity_settings" />
    </group>

</menu>
